fix refresh_token auth
